styles/gameplay.css
#UYES {
    position: absolute;
    aspect-ratio: 2.5/1;
    width: 10%;
    pointer-events: none;
    top: 85%;
    left: 70%;
    background-color: dimgrey;
    border: solid 0.5cqh darkgrey; /* ❗️cqh = container-height unit – bitte check Kompatibilität */
    border-radius: 15%;
    font-weight: 800;
    font-size: 2cqw;
}

#player-hand-container {
    grid-row: 3;
    grid-column: 1/-1;
    width: 100%;
    font-size: 1.2em;
    align-items: center;
    justify-content: center;
    display: flex;
    flex-wrap: wrap;

}

#yourTurn {
    grid-row: 3;
    grid-column: 3;
    /*position:absolute;*/
    text-align: center;
    font-size: 2cqw;
    font-weight: 900;
    color: var(--primary-yellow);
    -webkit-text-stroke: 0.07cqw white;
    text-shadow: -0.18cqw 0.2cqw black;

    top: 72%;
    left: 65%;

    div {
        align-content: center;
        justify-self: center;
        aspect-ratio: 1/1;
        width: 30%;
        border: 0.25cqw solid white;
        font-size: 7cqw;
    }

}

.card.normal {
    margin-left: -2em;
    flex-shrink: 0;
    transition: transform 0.5s;
}

.card.normal.hovered {
    transform: translateY(-1.6em);
    z-index: 999;
}

.card.normal.hovered + .card {
    transform: translateX(0.5em);
}

.card.normal.prev-hovered {
    transform: translateX(-0.5em);
}

.card.unplayable {
    opacity: 0.5;
    cursor: not-allowed;
    pointer-events: none;
}

#piles {
    grid-column: 1/-1;
    display: flex;
    flex-wrap: wrap;
    /*justify-content: center;*/
    justify-content: center;
    align-items: center;

    .pile {
        margin-left: 2em;
        margin-right: 2em;


        h2 {
            text-align: center;
            font-size: 2cqw;
            font-weight: 900;
            color: white;
            -webkit-text-stroke: 0.07cqw black;
            margin: 0;
        }

    }
}


#player-avatars {
    z-index: -1;
    align-self: center;
    position: relative;
    width: 90%;
    margin: 0 auto;
    max-height: 70vh;
    overflow-y: auto;

    display: flex;
    flex-wrap: wrap;
    flex-direction: column;
    gap: 15%;

    .row {
        display: flex;
        flex-wrap: wrap;
        justify-content: space-between;
        align-items: center;
    }

}

.avatar {
    border: 0.2cqw solid white;
    border-radius: 10%;
    aspect-ratio: 1/1;
    width: 10%;
    position: relative;
    background-color: rgba(169, 169, 169, 0.5); /* Grauton mit 50% Transparenz */
    flex-grow: 0;
    /*display: flex;*/

    .player-name {
        position: absolute;
        top: -1.2em;
        left: 50%;
        transform: translateX(-50%);
        width: max-content;
        color: white;
        -webkit-text-stroke: 0.05cqw black;
        font-weight: 600;
        pointer-events: none;
        text-shadow: 0 0.05em 0.1em black;
    }

    .cardHands {
        position: relative;
        top: 20%;

        display: flex;
        flex-direction: column;

        .avatar-row {
            .cardsleft {
                color: white;
                -webkit-text-stroke: 0.07cqw black;
                margin: 0;
            }

            display: flex;
            justify-content: center;
        }

        .card {

            width: 25%;
        }
    }

}

.avatar.inactive {
    opacity: 0.3;
}

.avatar.active,
#own-avatar.active {
    border: 0.8cqw solid var(--primary-yellow);
    box-shadow: 0 0 1cqw var(--primary-yellow);
}

#player1, #player2 {
    .cardHands {
        left: 105%;
    }
}

#player3, #player4 {
    .cardHands {
        right: 105%;
    }
}

#player2 {
    border: 0.8cqw solid var(--primary-yellow);
    background-color: rgba(149, 145, 4, 0.5);

    background-size: contain;

}

#player1 {
    background-size: contain;
}

#player3 {
    background-size: contain;
}

#own-avatar {

    border: 0.2cqw solid white;
    border-radius: 10%;
    aspect-ratio: 1/1;
    width: 10%;
    position: fixed;
    background-size: contain;
    top: 78%;
    left: 19%;

}

body#gameplay2 {
    #player2 {
        border: 0.2cqw solid white;

        &:after {
            content: "UYES!";
            position: absolute;
            top: -8%;
            left: 13%;
            font-size: 3cqw;
            color: white;
            -webkit-text-stroke: 0.07cqw black;
            background-color: var(--primary-red);
            border: 0.5cqw solid var(--primary-yellow);
            border-radius: 25% 25% 25% 0;
        }
    }

    #player3 {

        border: 0.8cqw solid var(--primary-yellow);
        background-color: rgba(149, 145, 4, 0.5);
    }
}

body#gameplay {
    #player2 {
        border: 0.2cqw solid white;

        &:after {
            content: "UYES!";
            position: absolute;
            top: -8%;
            left: 13%;
            font-size: 3cqw;
            color: white;
            -webkit-text-stroke: 0.07cqw black;
            background-color: var(--primary-red);
            border: 0.5cqw solid var(--primary-yellow);
            border-radius: 25% 25% 25% 0;
        }
    }

    #own-avatar {
        background-color: var(--secondary-yellow);
        opacity: 0.5;
    }


}

.my-turn #UYES {
    pointer-events: initial;
    background-color: var(--primary-yellow);
    border: solid 0.5cqh white;
}

body#gameplay {

    #winner {
        position: absolute;
        z-index: 101;
        border-radius: 10%;
        aspect-ratio: 1/1;
        width: 20%;
        top: 20%;
        left: 20%;

        border: 0.8cqw solid var(--primary-yellow);
        background-color: var(--secondary-yellow);
        opacity: 0.5;

        background-size: contain;

        &:after {
            content: " has won the game!";
            color: white;
            -webkit-text-stroke: 0.25cqw black;
            width: 300%;
            position: absolute;
            left: 120%;
            font-size: 8cqw;

        }
    }

    #milchglas2 {
        position: fixed;
        background: dimgrey;
        opacity: 0.9;
        backdrop-filter: blur(10px); /* erzeugt den "Milchglas"-Effekt */
        z-index: 100;
        width: 100%;
        height: 100%;
    }

    #ending-buttons {
        position: absolute;
        z-index: 101;
        display: flex;
        width: 100%;
        height: 30%;
        justify-content: space-evenly;
        align-items: center;
        bottom: 0;

        .ending {
            flex-grow: 0;


            aspect-ratio: 2.5/1;
            width: 20%;

            background-color: var(--primary-yellow);
            border: solid 0.5cqh white; /* ❗️cqh = container-height unit – bitte check Kompatibilität */
            border-radius: 15%;
            font-weight: 800;
            font-size: 4cqw;
        }
    }

}

#draw-pile {
    pointer-events: none;
    cursor: not-allowed;
}

.my-turn #draw-pile {
    pointer-events: auto;
}

.my-turn #draw-pile span.card:hover {
    cursor: grab;
}

.my-turn #draw-pile span.card:active {
    cursor: grabbing;
}

.Joiner #ending-buttons {
    display: none;
}

@media only screen and (max-width: 600px) {

}

